[GRIDAPPSD/GOSS-GridAPPS-D#657] Implement expected results view

--- a/frontend/src/app/App.common.scss
+++ b/frontend/src/app/App.common.scss
@@ -28,3 +28,7 @@
     height: calc(100vh - 60px);
     z-index: 1;
 }
+
+.expected-result-comparison-container .dialog-content {
+    overflow: hidden;
+}
