--- a/frontend/src/app/settings/Settings.common.scss
+++ b/frontend/src/app/settings/Settings.common.scss
@@ -2,6 +2,10 @@
     cursor: pointer;
 }
 
+.settings-dialog .dialog-content {
+    padding: 0;
+}
+
 .settings__menu {
     width: 270px;
     border-radius: 5px;
