--- a/frontend/src/app/shared/overlay/notification/Notification.common.scss
+++ b/frontend/src/app/shared/overlay/notification/Notification.common.scss
@@ -1,5 +1,5 @@
 .notification-container {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     z-index: 1000;
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    overflow: hidden;
 
     &.visible {
         pointer-events: all;
