--- a/frontend/src/app/shared/overlay/dialog/DialogActionGroup.common.scss
+++ b/frontend/src/app/shared/overlay/dialog/DialogActionGroup.common.scss
@@ -1,11 +1,16 @@
 .dialog-action-group {
     width: 100%;
     padding: 10px;
+    margin-top: -10px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 
     &>* {
         margin-right: 5px;
+    }
+
+    &:empty {
+        display: none;
     }
 }
