--- a/frontend/src/app/simulation/expected-result-comparison/views/simulation-vs-time-series/SimulationVsTimeSeries.common.scss
+++ b/frontend/src/app/simulation/expected-result-comparison/views/simulation-vs-time-series/SimulationVsTimeSeries.common.scss
@@ -13,3 +13,23 @@
         }
     }
 }
+
+.simulation-vs-time-series__file-upload {
+    display: flex;
+    flex-flow: column nowrap;
+    margin-right: 20px;
+    align-items: flex-start;
+}
+
+.simulation-vs-time-series__file-upload__file-name {
+    display: inline-block;
+    color: #fff;
+    margin-top: 5px;
+    opacity: 0.5;
+    font-style: italic;
+    font-size: 13px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 240px;
+}
