--- a/frontend/src/app/shared/overlay/notification/Notification.dark.scss
+++ b/frontend/src/app/shared/overlay/notification/Notification.dark.scss
@@ -2,6 +2,6 @@
 
 .notification {
     box-shadow: 0 0px 5px #2e2e2e;
-    background-color: rgb(59, 40, 40);
+    background-color: #1b1616;
     color: #fff;
 }
