--- a/frontend/src/app/shared/overlay/notification/Notification.light.scss
+++ b/frontend/src/app/shared/overlay/notification/Notification.light.scss
@@ -2,6 +2,6 @@
 
 .notification {
     box-shadow: 0 0 5px #3c3c3c;
-    background-color: #403636;
+    background-color: #1b1616;
     color: #fff;
 }
