--- a/frontend/src/app/shared/form/select/Select.common.scss
+++ b/frontend/src/app/shared/form/select/Select.common.scss
@@ -77,7 +77,7 @@
 .select__button-group {
     display: flex;
     align-items: center;
-    padding-top: 5px;
+    padding: 5px 5px 0 5px;
 
     button {
         margin-right: 5px;
