--- a/frontend/src/app/simulation/simulation-configuration/views/service-configuration-tab/ServiceConfiguration.common.scss
+++ b/frontend/src/app/simulation/simulation-configuration/views/service-configuration-tab/ServiceConfiguration.common.scss
@@ -35,3 +35,11 @@
         height: 20px;
     }
 }
+
+.service-configuration__no-user-input-options-message {
+    font-size: 1em;
+    font-weight: bold;
+    font-style: italic;
+    opacity: 0.5;
+    margin-left: 20px;
+}
