--- a/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
+++ b/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
@@ -10,6 +10,16 @@
         padding-top: 3px;
     }
 
+    &__zoom-control-container {
+        display: flex;
+        justify-content: flex-end;
+        padding: 5px 10px;
+
+        .icon-button {
+            margin-left: 5px;
+        }
+    }
+
     &__canvas {
         width: 100%;
         height: 100%;
@@ -40,17 +50,17 @@
     margin-bottom: 5px;
     border-radius: 10px;
     box-sizing: border-box;
+    border: 2px solid;
     cursor: pointer;
 }
 
 .measurement-chart__legend__color {
     width: 15px;
-    height: 10px;
+    height: 15px;
     display: inline-block;
-    padding: 2px 0;
     border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border: 1px solid transparent;
+    border-bottom-left-radius: inherit;
+    border-right: 2px solid;
 }
 
 .measurement-chart__legend__label {
