--- a/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLoggerMessage.dark.scss
+++ b/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLoggerMessage.dark.scss
@@ -10,7 +10,7 @@
 }
 
 $logLevels: FATAL ERROR WARN INFO DEBUG TRACE;
-$logLevelColors: #B71C1C #D32F2F #FFFF00 #F0F4C3 #686868 #C0CA33;
+$logLevelColors: #B71C1C #F00 #FFFF00 #F0F4C3 #686868 #C0CA33;
 $textColors: #fff #fff #000 #000 #fff #000;
 
 @for $index from 1 through length($logLevels) {
