--- a/frontend/src/app/simulation/topology-renderer/views/node-searcher/NodeSearcher.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/views/node-searcher/NodeSearcher.common.scss
@@ -26,19 +26,19 @@
 
     &__body {
         width: 100vw;
+        height: 100vh;
         position: relative;
         top: 0;
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
-        min-height: 90%;
+        padding-top: 2.5%;
 
         &__search {
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
-            margin-top: 2.5%;
 
             label {
                 width: initial;
@@ -69,7 +69,7 @@
             align-items: center;
             min-height: 16px;
             width: 100%;
-            margin-bottom: 1vh;
+            margin-bottom: 5vh;
             overflow-x: hidden;
             overflow-y: auto;
         }
