--- a/frontend/src/global-styles.common.scss
+++ b/frontend/src/global-styles.common.scss
@@ -4,10 +4,10 @@
 }
 
 @font-face {
-    font-family: 'Material Icons';
+    font-family: 'Material Icons Round';
     font-style: normal;
     font-weight: 400;
-    src: url(./assets/fonts/MaterialIcons-Regular.ttf);
+    src: url(./assets/fonts/MaterialIcons-Round.woff2);
 }
 
 html {
@@ -42,7 +42,7 @@ a {
 
 /* https://google.github.io/material-design-icons/ */
 .material-icons {
-    font-family: 'Material Icons';
+    font-family: 'Material Icons Round' !important;
     font-weight: normal;
     font-style: normal;
     font-size: 24px;
