[Bug fix] Fix partial powerflow highlighting of lines

--- a/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
+++ b/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
@@ -27,6 +27,10 @@
 
     .tick {
         transition: transform 0.25s ease;
+
+        text {
+            user-select: none;
+        }
     }
 }
 
