[bug-fix] Change arrow directions for lines/switches/transformers

--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -184,7 +184,30 @@
         &._ln6047579-1_,
         &._ln6411407-1_,
         &._ln5000chp-1_,
-        &._ln5002chp-1_ {
+        &._ln5002chp-1_,
+        &._ln6153059-1_,
+        &._ln6153058-1_,
+        &._ln6153057-2_,
+        &._ln5833611-1_,
+        &._ln5621834-1_,
+        &._ln5500957-1_,
+        &._ln5894192-1_,
+        &._ln5744344-1_,
+        &._ln5833652-1_,
+        &._ln5954983-1_,
+        &._ln5621886-1_,
+        &._ln5742836-1_,
+        &._ln5985378-1_,
+        &._ln5531256-1_,
+        &._ln6001653-2_,
+        &._ln5894238-1_,
+        &._ln5894238-2_,
+        &._ln6231993-1_,
+        &._ln6017292-1_,
+        &._ln6138604-1_,
+        &._ln6380825-1_,
+        &._ln5501004-1_,
+        &._ln5804808-1_ {
             marker-start: url(#reverse-power-flow-indicator--edge);
             marker-end: none;
         }
@@ -232,7 +255,30 @@
         &._ln6047579-1_,
         &._ln6411407-1_,
         &._ln5000chp-1_,
-        &._ln5002chp-1_ {
+        &._ln5002chp-1_,
+        &._ln6153059-1_,
+        &._ln6153058-1_,
+        &._ln6153057-2_,
+        &._ln5833611-1_,
+        &._ln5621834-1_,
+        &._ln5500957-1_,
+        &._ln5894192-1_,
+        &._ln5744344-1_,
+        &._ln5833652-1_,
+        &._ln5954983-1_,
+        &._ln5621886-1_,
+        &._ln5742836-1_,
+        &._ln5985378-1_,
+        &._ln5531256-1_,
+        &._ln6001653-2_,
+        &._ln5894238-1_,
+        &._ln5894238-2_,
+        &._ln6231993-1_,
+        &._ln6017292-1_,
+        &._ln6138604-1_,
+        &._ln6380825-1_,
+        &._ln5501004-1_,
+        &._ln5804808-1_ {
             marker-end: url(#normal-power-flow-indicator--edge);
             marker-start: none;
         }
@@ -285,7 +331,10 @@
         &._ln4625876_sw_,
         &._l9191_48332_sw_,
         &._ln0895780_sw_,
-        &._ln5001chp_sw_ {
+        &._ln5001chp_sw_,
+        &._tsw30473047_sw_,
+        &._ln0621886_sw_,
+        &._ln0653457_sw_ {
             marker-start: url(#reverse-power-flow-indicator--switch);
             marker-end: none;
         }
@@ -298,7 +347,10 @@
         &._ln4625876_sw_,
         &._l9191_48332_sw_,
         &._ln0895780_sw_,
-        &._ln5001chp_sw_ {
+        &._ln5001chp_sw_,
+        &._tsw30473047_sw_,
+        &._ln0621886_sw_,
+        &._ln0653457_sw_ {
             marker-end: url(#normal-power-flow-indicator--switch);
             marker-start: none;
         }
@@ -321,7 +373,17 @@
         &._t21399112c_,
         &._t5338942a_,
         &._t21399099a_,
-        &._t5338937c_ {
+        &._t5338937c_,
+        &._t227902981a_,
+        &._t5391989a_,
+        &._t5391989a_,
+        &._t5391990a_,
+        &._t5391991a_,
+        &._t5294842a_,
+        &._t227653310c_,
+        &._t225806974a_,
+        &._t5355780b_,
+        &._t5355777b_ {
             marker-start: url(#reverse-power-flow-indicator--transformer);
             marker-end: none;
         }
@@ -341,7 +403,17 @@
         &._t21399112c_,
         &._t5338942a_,
         &._t21399099a_,
-        &._t5338937c_ {
+        &._t5338937c_,
+        &._t227902981a_,
+        &._t5391989a_,
+        &._t5391989a_,
+        &._t5391990a_,
+        &._t5391991a_,
+        &._t5294842a_,
+        &._t227653310c_,
+        &._t225806974a_,
+        &._t5355780b_,
+        &._t5355777b_ {
             marker-end: url(#normal-power-flow-indicator--transformer);
             marker-start: none;
         }
