- [bug-fix] Gray out input component when it's disabled - [bug-fix] If setting a new form control in a form group, and it's already present,             we want to remove it from the set of invalid controls - Show a select control or an input control for attribute in scheduled command event form   depending whether the selected component type is regulator or not

--- a/frontend/src/app/shared/form/input/Input.dark.scss
+++ b/frontend/src/app/shared/form/input/Input.dark.scss
@@ -20,3 +20,11 @@
         background-color: red;
     }
 }
+
+.form-control.disabled {
+    .input-field__input {
+        color: rgba($primary-text-color, 0.1);
+        border-bottom-color: rgba($primary-text-color, 0.1);
+        pointer-events: none;
+    }
+}
