- Upgrade Webpack to version 5 - Upgrade d3 to version 7 - Add lint-staged - Upgrade eslint

--- a/frontend/src/app/simulation/alarms/views/new-alarm-notification/NewAlarmNotification.common.scss
+++ b/frontend/src/app/simulation/alarms/views/new-alarm-notification/NewAlarmNotification.common.scss
@@ -24,10 +24,10 @@
     left: 75%;
     font-size: 1vw;
     font-weight: bold;
-    border-radius: 1000px;
+    border-radius: 100%;
     padding: 5px;
-    min-width: 1vw;
-    min-height: 1vw;
+    width: 20px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
