--- a/client/src/app/common/filterable-table/FilterableTable.dark.scss
+++ b/client/src/app/common/filterable-table/FilterableTable.dark.scss
@@ -1,54 +1,26 @@
 @import '@constants.dark';
-@import 'FilterableTable.common';
+@import './FilterableTable.common';
 
-.filterable-table.ReactTable {
-    color: $primary-text-color;
-    border: 1px solid rgba(#fff, 0.25);
+.filterable-table {
+    border: 2px solid $table-border-color;
 
-    .rt-thead.-filters,
-    .rt-thead.-headerGroups {
-        border-bottom: 1px solid hsla(0, 0%, 100%, .25);
-    }
-
-    .rt-thead.-header {
-        box-shadow: none;
-        border-bottom: 1px solid hsla(0, 0%, 100%, .25);
-    }
-
-    .rt-thead.-filters input {
-        background: $theme-color;
-        border: 2px solid rgba(255, 255, 255, 0.5);
+    .thead {
+        background-color: $primary-color;
         color: $primary-text-color;
     }
 
-    .rt-tbody .rt-td:not(:last-of-type),
-    .rt-thead .rt-th:not(:last-of-type),
-    .rt-thead .rt-td:not(:last-of-type) {
-        border-right: 1px solid rgba(#fff, 0.25);
+    .th {
+        border-right: 2px solid $table-border-color;
+        border-bottom: 2px solid $table-border-color;
     }
 
-    .rt-tbody .rt-tr-group {
-        border-bottom: solid 1px rgba(#fff, 0.25);
+    .td {
+        border-right: 2px solid $table-border-color;
+        border-bottom: 2px solid $table-border-color;
+        color: $primary-text-color;
     }
 
-    .-previous button,
-    .-next button {
-        background-color: $accent-color;
-        color: $accent-text-color;
-        transition: background-color 0.25s ease;
-
-        &:disabled {
-            background-color: rgba($accent-color, 0.25) !important;
-        }
-
-        &:hover {
-            background-color: #556d79 !important;
-        }
-    }
-
-
-    .-previous button,
-    .-next button {
-        background-color: 50px;
+    .tfoot {
+        border-top: 2px solid $table-border-color;
     }
 }
