--- a/client/src/app/common/overlay/notification/Notification.common.scss
+++ b/client/src/app/common/overlay/notification/Notification.common.scss
@@ -18,7 +18,7 @@
     position: relative;
     top: -20px;
     left: 20px;
-    max-width: 90vw;
+    max-width: 700px;
     display: flex;
     align-items: center;
     font-size: 1.5em;
