Unfinished commit 1. Put down code for expected vs timeseries comparison 2. Need to fix plot not rendering all the way 3. Did not remove comments

--- a/client/src/app/expected-result-comparison/views/time-series-vs-time-series/TimeSeriesVsTimeSeriesChartResult.common.scss
+++ b/client/src/app/expected-result-comparison/views/time-series-vs-time-series/TimeSeriesVsTimeSeriesChartResult.common.scss
@@ -4,10 +4,11 @@
     }
 
     .line-chart__zoom-control-container {
-        display: none;
+        display: inline-block;
+        // display: none;
     }
 
     .line-chart__canvas__axis.x .tick {
-        visibility: hidden;
+        visibility: visible;
     }
 }
