Added phase column and re-arrange layout of dropdown menus

--- a/client/src/app/expected-result-comparison/views/time-series-vs-time-series/TimeSeriesVsTimeSeries.common.scss
+++ b/client/src/app/expected-result-comparison/views/time-series-vs-time-series/TimeSeriesVsTimeSeries.common.scss
@@ -1,10 +1,11 @@
 .time-series-vs-time-series-form {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     margin-bottom: 30px;
 
     .form-control.select {
-        margin-top: 0;
+        margin-top: 1;
         margin-bottom: 0;
 
         .form-control__label {
