Tweaks in styles

--- a/client/src/app/expected-result-comparison/views/time-series-vs-time-series/TimeSeriesVsTimeSeries.common.scss
+++ b/client/src/app/expected-result-comparison/views/time-series-vs-time-series/TimeSeriesVsTimeSeries.common.scss
@@ -1,7 +1,7 @@
 .time-series-vs-time-series-form {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: baseline;
     margin-bottom: 30px;
 
     .form-control.select {
