--- a/client/src/app/expected-result-comparison/views/expected-vs-time-series/ExpectedVsTimeSeries.common.scss
+++ b/client/src/app/expected-result-comparison/views/expected-vs-time-series/ExpectedVsTimeSeries.common.scss
@@ -1,12 +1,13 @@
 .expected-vs-time-series {
     display: flex;
+    flex-wrap: wrap;
     margin-left: 15px;
     margin-bottom: 30px;
     margin-top: 5px;
-    align-items: flex-start;
+    align-items: baseline;
 
     .form-control.select {
-        margin-top: 0;
+        margin-top: 1;
         margin-bottom: 0;
 
         .form-control__label {
@@ -20,6 +21,7 @@
     display: flex;
     flex-flow: column nowrap;
     margin-right: 20px;
+    margin-top: 5px;
     align-items: flex-start;
 }
 
