Adds Application Config tab and Service Config tab to Application&Services menu for Field Model 1. Next: Need to config these 2 menus for the future field model data stream.

--- a/client/src/app/simulation/simulation-configuration-editor/SimulationConfigurationEditor.common.scss
+++ b/client/src/app/simulation/simulation-configuration-editor/SimulationConfigurationEditor.common.scss
@@ -3,3 +3,8 @@
     width: 95vw;
     max-width: 95vw;
 }
+.field-model-simulation-configuration-form {
+    height: 80vh;
+    width: 100vw;
+    max-width: 100vw;
+}
